# prose

./: .editorconfig  LICENSE  README.md  pyproject.toml
prose/: cli.py
test/: test.env
